# rust-seaorm

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: mod.rs  pickle.rs  prelude.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
